--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   "scripts": {
     "test": "node --test test/**/*.test.js",
     "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "dev": "fastify start -w -l info -P app.js",
+    "lint": "npx eslint",
+    "lint:fix": "npx eslint --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.0",
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
-    "fastify-cli": "^7.0.1"
+    "fastify": "^5.0.0",
+    "fastify-cli": "^7.0.1",
+    "fastify-plugin": "^5.0.0"
   },
   "devDependencies": {
-    "c8": "^10.1.2"
+    "c8": "^10.1.2",
+    "neostandard": "^0.11.8"
   }
 }
