--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
+    "better-sqlite3": "^11.5.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
-    "fastify-plugin": "^5.0.0"
+    "fastify-plugin": "^5.0.0",
+    "knex": "^3.1.0"
   },
   "devDependencies": {
     "c8": "^10.1.2",
