--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/view": "^10.0.1",
     "better-sqlite3": "^11.5.0",
+    "eta": "^3.5.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
     "fastify-plugin": "^5.0.0",
