--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
     "fastify-plugin": "^5.0.0",
-    "knex": "^3.1.0"
+    "knex": "^3.1.0",
+    "ulidx": "^2.4.1"
   },
   "devDependencies": {
     "c8": "^10.1.2",
