--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "node --test test/**/*.test.js",
     "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js",
+    "dev": "fastify start -w -l debug -P app.js",
     "lint": "npx eslint",
     "lint:fix": "npx eslint --fix"
   },
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
+    "@fastify/formbody": "^8.0.1",
     "@fastify/sensible": "^6.0.0",
     "@fastify/view": "^10.0.1",
     "better-sqlite3": "^11.5.0",
