--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fastify-cli": "^7.0.1",
     "fastify-plugin": "^5.0.0",
     "knex": "^3.1.0",
+    "serialize-javascript": "^6.0.2",
     "ulidx": "^2.4.1"
   },
   "devDependencies": {
