--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/formbody": "^8.0.1",
     "@fastify/multipart": "^9.0.1",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/static": "^8.0.3",
     "@fastify/view": "^10.0.1",
     "better-sqlite3": "^11.5.0",
     "eta": "^3.5.0",
